# sup

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  jobs.yaml  pyproject.toml
.agent/: active
.agent/work/convert-sup-to-python/: decision.md  execplan.md  meta.json
.agent/work/terminal-dashboard-viewport/: decision.md  execplan.md  meta.json
.agent/work/terminal-dashboard-viewport/adversarial/: implementation-review-prompt.md  implementation-review-resolution.md  implementation-review.md  plan-rereview-attempt.md  plan-rereview-prompt.md  plan-review-prompt.md  plan-review-resolution.md  plan-review.md
.github/workflows/: ruff.yml
docs/superpowers/plans/: 2026-07-13-corepack-package-manager.md
docs/superpowers/specs/: 2026-07-13-corepack-package-manager-design.md
src/sup/: __init__.py  cli.py  display.py  jobs.py  logs.py  runner.py
tests/: terminal_harness.py  test_sup.py
